# large-image-augmentation

./: .gitignore  README.md  simd.cpp
albumentations/: rotate.py
c_example/: mmap_file.c  read.c
cairo_example/: drawing.c  hello.c  line.c  paint.c  pattern.c  push_pop  push_pop.c  read_png.py  run.sh  source_operator.c
glib_example/: mem_slice.c
libjpeg_example/: open.c  run.sh
opencv_example/: CMakeLists.txt  conanfile.py  cv_test.cpp  main.cpp  roi.cpp  run.sh  simple_remap.cpp
opencv_example/images/: flip_dog.py
openmp_example/: a.c  b.c  c.c  run.sh
openslide_example/: read_svs.c  read_svs.py  run.sh  runpy.sh
pil_example/: numpy2png.py  resize.py  rgba2rgb.py  rotate_example.py
simd_example/: simd_basic.cpp
simd_examples/: load.cpp
slideio_example/: 40k.py  io.sh  read_svs.py  run.sh
tiff_example/: a.c  decompress_tile.c  directory.c  getHomeDir.c  rawStrip.c  rawTile.c  run.sh
